Colocando as informações no local correto e utilizando estrutura rápida em html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-git clone https://github.com/jvpc-unifor/Git-AmbienteDS.git
-git status
-git add .\index.html (Nome do arquivo)
-git config --global user.name "(nome)"
-git config --global user.email "(email)"
-git commit -m "(Comentário)"
-git push
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
